# microsoft-edge-bookmark-sorter-flattener

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  normalize_with_retry.sh
.github/: copilot-instructions.md
.github/agents/: atdd-tester.agent.md  cargo-fuzz.agent.md  cargo-nextest.agent.md  cargo-test.agent.md  determinism-ordering.agent.md  domain-guardian.agent.md  event-observability.agent.md  graph-scc-specialist.agent.md  performance-memory.agent.md  project-manager.agent.md  release-engineer.agent.md  rust-architect.agent.md  serde-compatibility.agent.md  test-fuzz.agent.md  tokio-cli-ergonomics.agent.md
.github/prompts/: audit-architecture.prompt.md  domain-evolution.prompt.md  e2e-atdd.prompt.md  fix-test-failure.prompt.md  fuzz-hardening.prompt.md  increase-coverage.prompt.md  plan-goal.prompt.md  prepare-release.prompt.md  setup-testing.prompt.md  stabilize-determinism.prompt.md
docs/: domain-rules.md
src/: lib.rs  main.rs
src/domain/: graph.rs  mod.rs  model.rs  traits.rs
src/infrastructure/: event_ndjson.rs  mod.rs  scc_kosaraju.rs  schema_validator.rs  serde_json_adapter.rs  url_canonicalizer.rs
src/interface/: cli.rs  mod.rs
src/schemas/: bookmarks_schema.json  folder_schema.json  url_schema.json
src/usecase/: event.rs  mod.rs  stats.rs  validate.rs
tests/: cucumber_e2e.rs  normalize_pipeline.rs  normalize_then_validate.rs  scc_kosaraju.rs  schema_validator.rs  url_canonicalizer.rs
tests/features/: bookmarks.feature
tests/resources/: BookmarksMini  BookmarksMiniExpectedOutput  BookmarksMiniNested  folder_schema.json  (+2 more)
(+8 files in other folders)
