[package]
name = "microsoft-edge-bookmark-sorter-flattener"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
tracing = "0.1.43"
futures = "0.3.31"
tokio-stream = "0.1.17"
chrono = "0.4.42"
md5 = "0.8.0"

[dev-dependencies]
tempfile = "3.23.0"